# phorge

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  GOVERNANCE.md  KNOWN_ISSUES.md  README.md  ROADMAP.md  SECURITY.md  SEMVER.md  STABILITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  VISION.md  build.rs  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  playground.yml  release.yml  stub-registry.yml
bench/: baseline.json
conformance/: README.md
conformance/collections/: list-query.out  list-query.phg  list.phg  map.phg  set-map-ergonomics.phg  set.phg
conformance/diagnostics/: duplicate-enum-variant.expected  duplicate-enum-variant.phg  duplicate-static-field.expected  duplicate-static-field.phg  duplicate-type.expected  duplicate-type.phg  new-required.expected  new-required.phg  override-return-sig.expected  override-return-sig.phg  static-field-visibility.expected  static-field-visibility.phg  type-arg-count.expected  type-arg-count.phg
conformance/errors/: try-catch.phg
conformance/lang/: arithmetic.phg  bytes.phg  control-flow.phg  decimal.phg  destructuring.phg  foreach.out  foreach.phg  functions.phg  loops.out  loops.phg  native-operand.out  native-operand.phg  optionals.phg  ranges.out  ranges.phg  strings.phg  text-blocks.out  text-blocks.phg  type-aliases.out  type-aliases.phg
conformance/stdlib/: dates.out  dates.phg  datetimes.out  datetimes.phg  math-text.phg  text-breadth.out  text-breadth.phg  time.phg
conformance/types/: classes.phg  enums-match.phg  fixed-lists.out  fixed-lists.phg  generic-enums.phg  generics.phg  inheritance.phg  interfaces.phg  intersections.out  intersections.phg  overloading.phg  property-hooks.out  property-hooks.phg  statics.phg  traits.phg  unions.out  unions.phg  visibility.out  visibility.phg
conformance/web/: controller.out  controller.phg  middleware.out  middleware.phg  route-constraints.out  route-constraints.phg  router-attrs.phg  router.phg
docs/: ARCHITECTURE.md  DEPRECATION.md  GA-CHECKLIST.md  HISTORY.md  INVARIANTS.md  MILESTONES.md
docs/adr/: 0001-no-shared-run-vm-ir.md  0002-erasure-not-monomorphization.md  0003-rc-not-tracing-gc.md  0004-single-file-brace-namespace-php.md  0005-offline-only-vendor.md  README.md
docs/plans/: 2026-06-15-m1-plan1-scaffold-lexer.md  2026-06-15-m1-plan2-parser-expressions.md  2026-06-15-m1-plan3-statements-declarations.md  2026-06-15-m1-plan4-typechecker.md  2026-06-15-m1-plan5-evaluator.md  2026-06-15-m1-plan6-cli.md  2026-06-15-m1-polish.md  2026-06-15-m2-plan1-vm-core.md  2026-06-15-m2-plan2-compiler-runvm.md  2026-06-15-m2-plan3-functions-callframes.md  2026-06-15-transpile-php.md  2026-06-16-examples-coverage.md  2026-06-16-m2-p3.5-hardening-roadmap.md  2026-06-16-m2-p4-classes-enums-match.md  2026-06-16-m2-p5a-rc-shared-heap.md  2026-06-16-m2-wave4-compiler-types.md  2026-06-16-m2.5-phase1-build-linux-gnu.md  2026-06-16-m2.5-phase2-cross-os.md  2026-06-17-examples-backfill.md  2026-06-17-m3-s0-dx.md  2026-06-17-m3-s1-ergonomics.md  2026-06-17-m3-s2-null-safety.md  2026-06-17-v0.4.0-profiling-disasm.md  2026-06-18-m3-s3-lambdas-pipe.md  2026-06-18-m5-modules-packages.md  2026-06-18-m6-web-capabilities-research.md  2026-06-18-m8-php-import-design.md  2026-06-18-trackB-stdlib-io-imports.md  2026-06-19-m3-global-review-pass.plan.md  2026-06-19-m7-correctness-closure.plan.md  2026-06-19-phorge-ga-roadmap.plan.md  2026-06-19-phorj-ga-roadmap.plan.md  2026-06-20-m-rt-rich-types.plan.md  2026-06-20-post-wave3-four-tracks.plan.md  2026-06-21-error-handling-and-traces.plan.md  2026-06-21-ga-direction-and-autonomy.plan.md  2026-06-21-m-mut.1-mutable-locals.plan.md  2026-06-21-m-mut.4-clone-with-get-hooks.plan.md  2026-06-21-m-mut.5-element-set.plan.md  2026-06-21-m-mut.6-instance-fields.plan.md  (+42 more)
docs/specs/: 2026-06-15-ecosystem-roadmap-design.md  2026-06-15-m1-plan5-evaluator-design.md  2026-06-15-m1-plan6-cli-design.md  2026-06-15-m1-typechecker-design.md  2026-06-15-m2-bytecode-vm-design.md  2026-06-15-phorge-language-design.md  2026-06-15-transpile-php-design.md  2026-06-16-examples-coverage-design.md  2026-06-16-m2-p5-object-model-design.md  2026-06-16-m2.5-phase2-cross-os-design.md  2026-06-18-m6-web-design.md  (+65 more)
editors/: README.md
examples/: README.md  fib.phg  grades.phg  hello.phg
playground/: Cargo.toml  README.md
scripts/: perf-gate.sh
selftest/: README.md  arithmetic.phg  faults.phg
src/: ast.rs  bundle.rs  checker.rs  chunk.rs  cli.rs  compiler.rs  debug.rs  diagnostic.rs  dispatch.rs  dump.rs  inspect.rs  interpreter.rs  lexer.rs  lib.rs  limits.rs  loader.rs  lock.rs  main.rs  manifest.rs  mem.rs  native.rs  parser.rs  profile.rs  serve.rs  token.rs  transpile.rs  types.rs  value.rs  vendor.rs  vm.rs
tests/: build.rs  cli.rs  conformance.rs  diagnostics.rs  differential.rs  examples.rs  filesystem.rs  fmt.rs  interop.rs  lexer_integration.rs  lift_roundtrip.rs  mtest.rs  parser_integration.rs  process.rs  program_integration.rs  project.rs  random.rs  registry.rs  run_integration.rs  runtime.rs  serve.rs  typecheck_integration.rs  vendor.rs
tools/: core_rename.py  core_rename2.py  return_type_codemod.py
(+541 files in other folders)
