[package]
name = "phorge"
# M1 (interpreter + transpiler) + M2 (bytecode compiler + stack VM, P1–P5, closed) + M2.5 Phase 1
# (`phorge build` → standalone x86_64-linux-gnu) + CLI UX (-v/-h, stdin/-e/--) + the in-progress
# Phase 2 bundle refactor (object-format readers). Pre-1.0, unpublished single binary: the version
# tracks milestone progress, not a release cadence.
version = "0.4.0"
edition = "2021"
# Cargo floor for the `[lints]` table below (stabilised in Cargo 1.74); older Cargo silently
# ignores `[lints]`, which would drop the warnings=deny / clippy=deny quality gate. The crate is
# developed and verified on the toolchain pinned in `rust-toolchain.toml`.
rust-version = "1.74"

[lib]
name = "phorge"
path = "src/lib.rs"

[[bin]]
name = "phorge"
path = "src/main.rs"

# Quality gate (M2 P3.5 Wave 0, Task 0.5): clippy-clean and warning-free become a *compile* gate,
# not just a CI nicety. Solo dev controls the toolchain, so the known fragility of denying warnings
# in the manifest (a newer rustc/clippy can introduce warnings that then fail the build) is accepted.
# Pedantic stays opt-in (not in `clippy::all`). `unsafe` is forbidden via `#![forbid(unsafe_code)]`
# on the crate roots.
[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
