[package]
name = "phorge"
# Pre-1.0; the version tracks milestone progress, not a release cadence. First tagged pre-release:
# 0.5.0-alpha.1 rolls up everything since the 0.4.0 internal mark — M3 + M-RT (full rich-type system),
# M5 (packages), M2.5 cross-OS `phg build`, M6 (web, partial), the pattern cluster, and the WASM
# playground. `-v`/`--version` reads this value via CARGO_PKG_VERSION.
version = "0.5.0-alpha.1"
edition = "2021"
# Cargo floor for the `[lints]` table below (stabilised in Cargo 1.74); older Cargo silently
# ignores `[lints]`, which would drop the warnings=deny / clippy=deny quality gate. The crate is
# developed and verified on the toolchain pinned in `rust-toolchain.toml`.
rust-version = "1.74"

[lib]
name = "phorge"
path = "src/lib.rs"

[[bin]]
name = "phg"
path = "src/main.rs"

# Quality gate (M2 P3.5 Wave 0, Task 0.5): clippy-clean and warning-free become a *compile* gate,
# not just a CI nicety. Solo dev controls the toolchain, so the known fragility of denying warnings
# in the manifest (a newer rustc/clippy can introduce warnings that then fail the build) is accepted.
# Pedantic stays opt-in (not in `clippy::all`). `unsafe` is forbidden via `#![forbid(unsafe_code)]`
# on the crate roots.
[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

# The WASM playground (`playground/`) is a separate workspace member so the core `phorge` crate above
# stays dependency-free and `#![forbid(unsafe_code)]`. wasm-bindgen (the only external crate in the
# project) lives solely in that member, as a wasm32-only target dependency — see `playground/Cargo.toml`.
[workspace]
members = ["playground"]
